--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <title>Document</title>
 </head>
 <body>
+    <div>
+        <p>Lorem ipsum dolor sit amet consectetur 
+            
+        adipisicing elit. Tempora aperiam ex ad,
+        
+        delectus pariatur beatae exercitationem! Neque nihil, sunt consequuntur sequi repellat molestiae officiis quos nemo voluptatum et pariatur praesentium?</p>
+    </div>
     <script  src="index.js" ></script>
 </body>
 </html>
